# flaskr

./: .dockerignore  .env.dev  .gitignore  Dockerfile.dev  Makefile  README.md  build.sh  compose.dev.yml  compose.prod.yml  docker-compose.dev.yml  pyproject.toml  render.yml  run.py
flaskr/: __init__.py  cli.py  config.py  db.py  models.py
flaskr/scripts/: main.py  run.py
flaskr/templates/: base.html
flaskr/templates/auth/: login.html  register.html
flaskr/templates/blog/: index.html  update.html
flaskr/views/: auth.py  blog.py
tests/: conftest.py  data.sql  test_db.py  test_factory.py
tests/test_views/: test_auth.py  test_blog.py
